--- a/ferreteria/src/Clientes/ClientesGUI.form
+++ b/ferreteria/src/Clientes/ClientesGUI.form
@@ -31,7 +31,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
-          <text value="Id"/>
+          <text value="ID Cliente"/>
         </properties>
       </component>
       <component id="3af60" class="javax.swing.JLabel">
@@ -152,7 +152,7 @@
       </component>
       <component id="d4c64" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="22"/>
