--- a/ferreteria/src/Empleados/EmpleadosGUI.form
+++ b/ferreteria/src/Empleados/EmpleadosGUI.form
@@ -29,7 +29,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
-          <text value="Id"/>
+          <text value="ID Empleado"/>
         </properties>
       </component>
       <component id="16048" class="javax.swing.JTextField" binding="ID">
@@ -136,7 +136,7 @@
       </component>
       <component id="bdd24" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="22"/>
