--- a/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
+++ b/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
@@ -8,7 +8,7 @@
     <properties>
       <preferredSize width="900" height="700"/>
     </properties>
-    <border type="none" title="Sistema de Gestión de Órdenes de Compra" title-justification="2">
+    <border type="none" title="Órdenes de compra" title-justification="2">
       <font size="18" style="1"/>
     </border>
     <children>
