--- a/ferreteria/src/Sockets/ServidorGUI.form
+++ b/ferreteria/src/Sockets/ServidorGUI.form
@@ -29,7 +29,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16220934"/>
+          <background color="-329479"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Enviar"/>
         </properties>
@@ -58,7 +58,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16220934"/>
+          <background color="-329479"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Iniciar servidor"/>
         </properties>
