--- a/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
+++ b/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Orden_Compras.OrdenesCompraGUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="10">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="10">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="800" height="600"/>
@@ -15,7 +15,7 @@
       <grid id="a2b29" binding="filtroPanel" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="-1">
         <margin top="5" left="5" bottom="5" right="5"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="etched" title="Filtros de Búsqueda">
@@ -37,7 +37,7 @@
             </constraints>
             <properties>
               <font style="1"/>
-              <text value="ID Orden"/>
+              <text value="ID de Órden"/>
             </properties>
           </component>
           <component id="4d7c1" class="javax.swing.JTextField" binding="filtroTextField">
@@ -74,7 +74,7 @@
       </grid>
       <scrollpane id="9f1fa">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="300"/>
           </grid>
         </constraints>
@@ -95,10 +95,10 @@
       <grid id="f12e9" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="10" vgap="10">
         <margin top="5" left="5" bottom="5" right="5"/>
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title="Detalles de Orden de Compra">
+        <border type="etched" title="Detalles de la orden de compra">
           <font style="1"/>
         </border>
         <children>
@@ -284,15 +284,6 @@
           </component>
         </children>
       </grid>
-      <component id="85d22" class="javax.swing.JButton" binding="enviarCorreoButton">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-16220934"/>
-          <text value="Enviar factura por correo"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
