--- a/ferreteria/src/Proveedores/ProveedoresGUI.form
+++ b/ferreteria/src/Proveedores/ProveedoresGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="455"/>
+      <xy x="20" y="20" width="593" height="566"/>
     </constraints>
     <properties>
       <font name="JetBrains Mono"/>
@@ -16,7 +16,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
-          <text value="Id_proveedor"/>
+          <text value="ID Proveedor"/>
         </properties>
       </component>
       <component id="1e2b" class="javax.swing.JTextField" binding="id_proveedorTextField">
@@ -93,7 +93,7 @@
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-13276874"/>
+          <background color="-11422714"/>
           <font name="JetBrains Mono"/>
           <text value="Agregar"/>
         </properties>
@@ -137,7 +137,7 @@
       </component>
       <component id="1207c" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="24"/>
