--- a/ferreteria/src/Reportes/ReportesGUI.form
+++ b/ferreteria/src/Reportes/ReportesGUI.form
@@ -17,7 +17,7 @@
         </constraints>
         <properties>
           <font name="Arial" size="18" style="1"/>
-          <text value="Sistema de Reportes - Ferretería"/>
+          <text value="Reportes"/>
         </properties>
       </component>
       <grid id="9bb64" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -144,7 +144,7 @@
           </component>
         </children>
       </grid>
-      <grid id="a3f6" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a3f6" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -152,21 +152,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="d2b48" class="javax.swing.JButton" binding="generarReporteButton">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16220934"/>
-              <font name="JetBrains Mono"/>
-              <horizontalTextPosition value="0"/>
-              <icon value=""/>
-              <text value="Generar Reporte"/>
-            </properties>
-          </component>
           <component id="87e3a" class="javax.swing.JButton" binding="limpiarButton">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16220934"/>
@@ -176,23 +164,23 @@
               <text value="Limpiar"/>
             </properties>
           </component>
-          <component id="9b9" class="javax.swing.JButton" binding="exportarPDFButton">
+          <hspacer id="2c1c1">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="d2b48" class="javax.swing.JButton" binding="generarReporteButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16220934"/>
               <font name="JetBrains Mono"/>
-              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
               <icon value=""/>
-              <text value="Exportar a PDF"/>
+              <text value="Generar Reporte"/>
             </properties>
           </component>
-          <hspacer id="2c1c1">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
         </children>
       </grid>
       <component id="9fcc8" class="javax.swing.JLabel">
@@ -236,21 +224,21 @@
         <properties/>
         <border type="none"/>
         <children>
+          <hspacer id="26c75">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
           <component id="d47d5" class="javax.swing.JButton" binding="regresarButton">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16220934"/>
               <font name="JetBrains Mono"/>
-              <text value="Regresar"/>
+              <text value="Volver"/>
             </properties>
           </component>
-          <hspacer id="26c75">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
         </children>
       </grid>
     </children>
