--- a/ferreteria/src/VentasGUI/VentasGUI.form
+++ b/ferreteria/src/VentasGUI/VentasGUI.form
@@ -67,7 +67,7 @@
       <grid id="cde92" binding="producto_elegido" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
@@ -154,7 +154,7 @@
       <grid id="78bc5" binding="preciocantidad" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
@@ -235,7 +235,7 @@
       <grid id="808c" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
@@ -293,7 +293,7 @@
       <grid id="3b242" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -334,16 +334,6 @@
           </grid>
         </children>
       </grid>
-      <component id="96c96" class="javax.swing.JButton" binding="cobrarButton" default-binding="true">
-        <constraints>
-          <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-16220934"/>
-          <font name="JetBrains Mono"/>
-          <text value="Realizar Venta"/>
-        </properties>
-      </component>
       <scrollpane id="d5e42">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -382,7 +372,7 @@
             </constraints>
             <properties>
               <font name="JetBrains Mono"/>
-              <text value="ID DEL CLIENTE :"/>
+              <text value="ID Cliente"/>
             </properties>
           </component>
           <component id="b70ae" class="javax.swing.JLabel">
@@ -511,6 +501,17 @@
         <properties>
           <font name="JetBrains Mono" size="24"/>
           <text value="Gestión de ventas"/>
+        </properties>
+      </component>
+      <component id="96c96" class="javax.swing.JButton" binding="cobrarButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-8356225"/>
+          <font name="JetBrains Mono"/>
+          <horizontalAlignment value="0"/>
+          <text value="Realizar Venta"/>
         </properties>
       </component>
     </children>
