--- a/ferreteria/src/Clientes/ClientesGUI.form
+++ b/ferreteria/src/Clientes/ClientesGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Clientes.ClientesGUI">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="14" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="15" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="589" height="571"/>
@@ -10,9 +10,10 @@
     <children>
       <scrollpane id="dc339">
         <constraints>
-          <grid row="1" column="0" row-span="13" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="14" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1841808"/>
           <font name="JetBrains Mono"/>
         </properties>
         <border type="none"/>
@@ -157,6 +158,17 @@
         <properties>
           <font name="JetBrains Mono" size="22"/>
           <text value="Clientes"/>
+        </properties>
+      </component>
+      <component id="3d47f" class="javax.swing.JButton" binding="volverButton" default-binding="true">
+        <constraints>
+          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-8356225"/>
+          <enabled value="true"/>
+          <foreground color="-329479"/>
+          <text value="Volver"/>
         </properties>
       </component>
     </children>
