--- a/ferreteria/src/Empleados/EmpleadosGUI.form
+++ b/ferreteria/src/Empleados/EmpleadosGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Empleados.EmpleadosGUI">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="12" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="33" y="38" width="601" height="546"/>
@@ -141,6 +141,15 @@
         <properties>
           <font name="JetBrains Mono" size="22"/>
           <text value="Empleados"/>
+        </properties>
+      </component>
+      <component id="b1f28" class="javax.swing.JButton" binding="volverAlMenúButton" default-binding="true">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-8356225"/>
+          <text value="Volver al menú"/>
         </properties>
       </component>
     </children>
