--- a/ferreteria/src/Proveedores/ProveedoresGUI.form
+++ b/ferreteria/src/Proveedores/ProveedoresGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Proveedores.ProveedoresGUI">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="14" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="593" height="566"/>
@@ -158,6 +158,15 @@
             <item value="Electricidad y Cableado"/>
             <item value="Adhesivos y Selladores"/>
           </model>
+        </properties>
+      </component>
+      <component id="161b7" class="javax.swing.JButton" binding="volverAlMenúButton" default-binding="true">
+        <constraints>
+          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-8356225"/>
+          <text value="Volver al Menú"/>
         </properties>
       </component>
     </children>
