--- a/ferreteria/src/Sockets/ServidorGUI.form
+++ b/ferreteria/src/Sockets/ServidorGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Sockets.ServidorGUI">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -61,6 +61,15 @@
           <background color="-329479"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Iniciar servidor"/>
+        </properties>
+      </component>
+      <component id="cd77c" class="javax.swing.JButton" binding="volverAlMenúButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-8356225"/>
+          <text value="Volver al menú"/>
         </properties>
       </component>
     </children>
