--- a/ferreteria/src/MenuP/MenuPrincipal.form
+++ b/ferreteria/src/MenuP/MenuPrincipal.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MenuP.MenuPrincipal">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="2" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="3" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="25" left="25" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="766" height="402"/>
+      <xy x="20" y="20" width="824" height="402"/>
     </constraints>
     <properties>
       <background color="-16055278"/>
@@ -102,6 +102,14 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
+      <component id="fad70" class="javax.swing.JButton" binding="chatMenu">
+        <constraints>
+          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Chat"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
