--- a/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
+++ b/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
@@ -280,11 +280,14 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="true"/>
+            </properties>
           </component>
         </children>
       </grid>
-      <component id="13a03" class="javax.swing.JButton" binding="volverAlMenúButton" default-binding="true">
+      <component id="e9887" class="javax.swing.JButton" binding="volverAlMenúButton" default-binding="true">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
