--- a/ferreteria/src/Reportes/ReportesGUI.form
+++ b/ferreteria/src/Reportes/ReportesGUI.form
@@ -76,7 +76,7 @@
               </component>
             </children>
           </scrollpane>
-          <grid id="c5cf2" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="c5cf2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -86,26 +86,8 @@
               <enabled value="false"/>
             </properties>
             <border type="none"/>
-            <children>
-              <component id="22b2a" class="javax.swing.JSpinner" binding="parametroSpinner">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font name="JetBrains Mono"/>
-                </properties>
-              </component>
-            </children>
+            <children/>
           </grid>
-          <component id="2022f" class="javax.swing.JLabel" binding="parametroLabel">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <font name="JetBrains Mono"/>
-              <text value="Límite de registros:"/>
-            </properties>
-          </component>
           <component id="f3a6e" class="javax.swing.JLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -144,7 +126,7 @@
           </component>
         </children>
       </grid>
-      <grid id="a3f6" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a3f6" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -152,26 +134,14 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="87e3a" class="javax.swing.JButton" binding="limpiarButton">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16220934"/>
-              <font name="JetBrains Mono"/>
-              <horizontalTextPosition value="0"/>
-              <icon value=""/>
-              <text value="Limpiar"/>
-            </properties>
-          </component>
           <hspacer id="2c1c1">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
           <component id="d2b48" class="javax.swing.JButton" binding="generarReporteButton">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16220934"/>
@@ -229,14 +199,14 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="d47d5" class="javax.swing.JButton" binding="regresarButton">
+          <component id="d47d5" class="javax.swing.JButton" binding="volverButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16220934"/>
               <font name="JetBrains Mono"/>
-              <text value="Volver"/>
+              <text value="Volver al menú"/>
             </properties>
           </component>
         </children>
